Updated email, added LinkedIn, new resume. Also fixed spacing issues in mobile view.

--- a/css/style.css
+++ b/css/style.css
@@ -106,14 +106,13 @@ main {
     font-size: 40px;
     padding-right: 30px;
     flex: 1;
-    border-right: #071013 solid 2px;
+    /* border-right: #071013 solid 2px; */
 }
 
 .subjectmain p {
     color: #677A8E;
     font-size: 12px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px;
     margin-right: 20px;
     flex: 3;
 }
@@ -165,7 +164,7 @@ main {
 /* sample styling */
 
 .samples {
-    margin: 40px 10px;
+    margin: 10px 10px;
     padding: 5px;
     width: 70%;
     display: flex;
@@ -292,5 +291,12 @@ footer {
     
     header a {
         padding: 5px;
+    }
+
+    .subjectmain {
+        /* margin: 20px 10px; */
+        flex-direction: column;
+        /* flex-wrap: wrap; */
+        /* width: 100%; */
     }
 }
